--- a/OpenCL_V01/OpenCL_V01.vcxproj.filters
+++ b/OpenCL_V01/OpenCL_V01.vcxproj.filters
@@ -24,5 +24,16 @@
     <ClCompile Include="Source1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Vector3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="kernels\image.cl">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="..\..\..\..\..\Downloads\OpenCL_Demo\Si v0.5 OpenCL\src\RenderKernel.cl">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
