--- a/OpenCL_V01/OpenCL_V01.vcxproj
+++ b/OpenCL_V01/OpenCL_V01.vcxproj
@@ -84,6 +84,11 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Source1.cpp" />
+    <ClCompile Include="Vector3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\Downloads\OpenCL_Demo\Si v0.5 OpenCL\src\RenderKernel.cl" />
+    <None Include="kernels\image.cl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
